# appsignals-mcp-server-v2

./: pyproject.toml
src/appsignals/: main.py  models.py  server.py
tests/: conftest.py  test_models.py  test_server.py
tests/test_data/: aws_responses.py
